--- a/Create_View/src/create_view/config.yaml
+++ b/Create_View/src/create_view/config.yaml
@@ -21,9 +21,9 @@ tables:
   - table: sales_schedule_group
     dataset: advertising_linear_management
     primary_key: id_sales_schedule_group
-  - table: sales_schedule_group
+  - table: channel_schedule_group
     dataset: advertising_linear_management
-    primary_key: id_sales_schedule_group,id_sales_channel
+    primary_key: id_sales_channel_schedule_group,id_sales_channel
   - table: section_type
     dataset: advertising_linear_management
     primary_key: id_section_type
